[gd_scene load_steps=35 format=4 uid="uid://dqnqxrlynm1bf"]

[ext_resource type="Shader" path="res://Shaders/transparent_0.gdshader" id="1_lr302"]
[ext_resource type="Script" path="res://Scripts/Battle/battle_scene.gd" id="1_y8lsx"]
[ext_resource type="Texture2D" uid="uid://b7oqcrqnylqpn" path="res://Assets/textbox.png" id="2_kxroq"]
[ext_resource type="Texture2D" uid="uid://co68jmp3h7vvx" path="res://Assets/text_tilemap.png" id="5_0c8qe"]
[ext_resource type="Texture2D" uid="uid://g70yjfh4uwri" path="res://Assets/battle_bgs.png" id="5_gi5so"]
[ext_resource type="PackedScene" uid="uid://xoiq8tv5arkb" path="res://Scenes/battle_player.tscn" id="6_a1wqe"]
[ext_resource type="PackedScene" uid="uid://cdkr3ys2p8pav" path="res://Scenes/element_hitbox.tscn" id="6_esukt"]
[ext_resource type="PackedScene" uid="uid://dqed57xn05m7v" path="res://Scenes/battle_enemy.tscn" id="7_n3lhc"]
[ext_resource type="Texture2D" uid="uid://dtq2qs5kyyoh4" path="res://Assets/glove.png" id="8_0fq08"]
[ext_resource type="PackedScene" uid="uid://dj0s26ytxhbbw" path="res://Scenes/text_button.tscn" id="9_iomjt"]
[ext_resource type="PackedScene" uid="uid://ga3b5se2417b" path="res://Scenes/hp_tracker.tscn" id="10_072f8"]
[ext_resource type="PackedScene" uid="uid://be5tng8gy2lh0" path="res://Scenes/textbox.tscn" id="11_yjsqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dobpy"]
shader = ExtResource("1_lr302")

[sub_resource type="AtlasTexture" id="AtlasTexture_bl5q3"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 4, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r68rf"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 4, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktwhi"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 38, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lurhn"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 38, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i121a"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 72, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg3e2"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 72, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hmm0"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 106, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygcr8"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 106, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksfk8"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 140, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rcep"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 140, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4awp"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 174, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wik5d"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 174, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbfff"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 208, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1xrf"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 208, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvid1"]
atlas = ExtResource("5_gi5so")
region = Rect2(2, 242, 112, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb25n"]
atlas = ExtResource("5_gi5so")
region = Rect2(116, 242, 112, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_65h61"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl5q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r68rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktwhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lurhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i121a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg3e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hmm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygcr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksfk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rcep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4awp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wik5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbfff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1xrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvid1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb25n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u8bfj"]
texture = ExtResource("5_0c8qe")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_k0y4w"]
tile_size = Vector2i(8, 12)
sources/0 = SubResource("TileSetAtlasSource_u8bfj")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v50eh"]
texture = ExtResource("5_0c8qe")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_dequl"]
tile_size = Vector2i(7, 8)
sources/0 = SubResource("TileSetAtlasSource_v50eh")

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_y8lsx")

[node name="PlayerDisplayBox" type="NinePatchRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_dobpy")
offset_left = 251.0
offset_top = 20.0
offset_right = 413.0
offset_bottom = 140.0
scale = Vector2(4, 4)
texture = ExtResource("2_kxroq")
region_rect = Rect2(0, 0, 24, 22)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VisMask" type="ColorRect" parent="PlayerDisplayBox"]
clip_children = 1
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 157.0
offset_bottom = 115.0
color = Color(0, 0, 0, 1)

[node name="Background" type="AnimatedSprite2D" parent="PlayerDisplayBox/VisMask"]
texture_repeat = 2
position = Vector2(20.25, 16)
sprite_frames = SubResource("SpriteFrames_65h61")
frame = 7

[node name="Background2" type="AnimatedSprite2D" parent="PlayerDisplayBox/VisMask"]
texture_repeat = 2
position = Vector2(132.25, 16)
sprite_frames = SubResource("SpriteFrames_65h61")
frame = 7

[node name="BattlePlayer" parent="PlayerDisplayBox/VisMask" instance=ExtResource("6_a1wqe")]
offset_left = 112.25
offset_top = 44.0
offset_right = 112.25
offset_bottom = 44.0
player_class = 4
av_name = "Madi"
hp = 15
max_hp = 15

[node name="ElementHitbox" parent="PlayerDisplayBox/VisMask/BattlePlayer" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -8.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-12, 24)
hp_text_pos = Vector2(32, 8)

[node name="BattlePlayer2" parent="PlayerDisplayBox/VisMask" instance=ExtResource("6_a1wqe")]
offset_left = 130.25
offset_top = 62.0
offset_right = 130.25
offset_bottom = 62.0
player_class = 1
av_name = "Jay"
hp = 24
max_hp = 24

[node name="ElementHitbox2" parent="PlayerDisplayBox/VisMask/BattlePlayer2" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -8.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-12, 24)
hp_text_pos = Vector2(32, 8)

[node name="BattlePlayer3" parent="PlayerDisplayBox/VisMask" instance=ExtResource("6_a1wqe")]
offset_left = 112.25
offset_top = 80.0
offset_right = 112.25
offset_bottom = 80.0
player_class = 5
av_name = "Liko"

[node name="ElementHitbox" parent="PlayerDisplayBox/VisMask/BattlePlayer3" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -8.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-12, 24)
hp_text_pos = Vector2(32, 8)

[node name="BattlePlayer4" parent="PlayerDisplayBox/VisMask" instance=ExtResource("6_a1wqe")]
offset_left = 130.25
offset_top = 98.0
offset_right = 130.25
offset_bottom = 98.0
player_class = 3
av_name = "Gyro"
hp = 40
max_hp = 40

[node name="ElementHitbox" parent="PlayerDisplayBox/VisMask/BattlePlayer4" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -8.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-12, 24)
hp_text_pos = Vector2(32, 8)

[node name="BattleEnemy" parent="PlayerDisplayBox/VisMask" instance=ExtResource("7_n3lhc")]
offset_left = 17.75
offset_top = 48.5
offset_right = 17.75
offset_bottom = 48.5

[node name="ElementHitbox" parent="PlayerDisplayBox/VisMask/BattleEnemy" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -17.0
offset_top = -16.0
offset_right = 49.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-4, 32)
hp_text_pos = Vector2(52, 12)

[node name="BattleEnemy2" parent="PlayerDisplayBox/VisMask" instance=ExtResource("7_n3lhc")]
offset_left = 17.75
offset_top = 80.5
offset_right = 17.75
offset_bottom = 80.5

[node name="ElementHitbox2" parent="PlayerDisplayBox/VisMask/BattleEnemy2" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -17.0
offset_top = -16.0
offset_right = 49.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-4, 32)
hp_text_pos = Vector2(52, 12)

[node name="BattleEnemy3" parent="PlayerDisplayBox/VisMask" instance=ExtResource("7_n3lhc")]
offset_left = 53.25
offset_top = 64.0
offset_right = 53.25
offset_bottom = 64.0
enemy_type = 4
av_name = "Knight"
hp = 40
max_hp = 40

[node name="ElementHitbox" parent="PlayerDisplayBox/VisMask/BattleEnemy3" instance=ExtResource("6_esukt")]
layout_mode = 0
offset_left = -22.0
offset_top = -23.0
offset_right = 66.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
cursor_pos = Vector2(-8, 46)
hp_text_pos = Vector2(52, 20)

[node name="BattleEnemy4" parent="PlayerDisplayBox/VisMask" instance=ExtResource("7_n3lhc")]
visible = false
offset_left = 49.75
offset_top = 48.75
offset_right = 49.75
offset_bottom = 48.75
hp = 0

[node name="HPTrackerP1" parent="." instance=ExtResource("10_072f8")]
offset_left = 899.0
offset_top = 20.0
offset_right = 941.0
offset_bottom = 50.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattlePlayer")

[node name="HPTrackerP2" parent="." instance=ExtResource("10_072f8")]
offset_left = 899.0
offset_top = 140.0
offset_right = 941.0
offset_bottom = 170.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattlePlayer2")

[node name="HPTrackerP3" parent="." instance=ExtResource("10_072f8")]
offset_left = 899.0
offset_top = 260.0
offset_right = 941.0
offset_bottom = 290.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattlePlayer3")

[node name="HPTrackerP4" parent="." instance=ExtResource("10_072f8")]
offset_left = 899.0
offset_top = 380.0
offset_right = 941.0
offset_bottom = 410.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattlePlayer4")

[node name="HPTrackerE1" parent="." instance=ExtResource("10_072f8")]
offset_left = 83.0
offset_top = 20.0
offset_right = 125.0
offset_bottom = 50.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattleEnemy")

[node name="HPTrackerE2" parent="." instance=ExtResource("10_072f8")]
offset_left = 83.0
offset_top = 140.0
offset_right = 125.0
offset_bottom = 170.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattleEnemy2")

[node name="HPTrackerE3" parent="." instance=ExtResource("10_072f8")]
offset_left = 83.0
offset_top = 260.0
offset_right = 125.0
offset_bottom = 290.0
avatar_path = NodePath("../PlayerDisplayBox/VisMask/BattleEnemy3")

[node name="HPTrackerE4" parent="." instance=ExtResource("10_072f8")]
visible = false
offset_left = 83.0
offset_top = 380.0
offset_right = 125.0
offset_bottom = 410.0

[node name="CommandDisplayBox" type="NinePatchRect" parent="."]
material = SubResource("ShaderMaterial_dobpy")
offset_left = 760.0
offset_top = 500.0
offset_right = 837.0
offset_bottom = 532.0
scale = Vector2(4, 4)
texture = ExtResource("2_kxroq")
region_rect = Rect2(0, 0, 24, 22)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VisMask" type="ColorRect" parent="CommandDisplayBox"]
clip_children = 2
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 72.0
offset_bottom = 27.0
color = Color(0, 0, 0, 1)

[node name="FightBtn" parent="CommandDisplayBox/VisMask" instance=ExtResource("9_iomjt")]
offset_left = 6.75
offset_top = 5.0
offset_right = 6.75
offset_bottom = 5.0

[node name="ItemBtn" parent="CommandDisplayBox/VisMask" instance=ExtResource("9_iomjt")]
offset_left = 40.0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 5.0
text = "ITEMS"

[node name="RunBtn" parent="CommandDisplayBox/VisMask" instance=ExtResource("9_iomjt")]
offset_left = 28.0
offset_top = 12.5
offset_right = 28.0
offset_bottom = 12.5
text = "RUN"

[node name="Textbox" parent="." instance=ExtResource("11_yjsqv")]
self_modulate = Color(1, 1, 1, 1)
offset_left = 87.0
offset_top = 500.0
offset_right = 250.0
offset_bottom = 531.0
text = "Jesters and a Knight appear!
Madi's turn!"
line_spacing = 12

[node name="ColorRect" parent="Textbox" index="0"]
offset_right = 159.0
offset_bottom = 28.0
color = Color(0, 0, 0, 1)

[node name="VisMask" parent="Textbox" index="1"]
offset_right = 159.0
offset_bottom = 28.0

[node name="TextDisplay" parent="Textbox/VisMask" index="0"]
position = Vector2(3.25, 1.5)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAAAAAAAAAADAAkAAAABAAAAAAAIAAoAAAACAAAAAAAGAAsAAAADAAAAAAAHAAsAAAAEAAAAAAAIAAoAAAAFAAAAAAAFAAsAAAAGAAAAAAAGAAsAAAAIAAAAAAAEAAoAAAAJAAAAAAABAAsAAAAKAAAAAAAHAAoAAAAMAAAAAAAEAAoAAAAOAAAAAAAEAAkAAAAPAAAAAAABAAsAAAAQAAAAAAAMAAoAAAARAAAAAAAKAAoAAAASAAAAAAALAAoAAAATAAAAAAAHAAsAAAAVAAAAAAAEAAoAAAAWAAAAAAADAAsAAAAXAAAAAAADAAsAAAAYAAAAAAAIAAoAAAAZAAAAAAAEAAoAAAAaAAAAAAAFAAsAAAAbAAAAAAAEAAwAAAAAAAEAAAAGAAkAAAABAAEAAAAEAAoAAAACAAEAAAAHAAoAAAADAAEAAAAMAAoAAAAEAAEAAAAOAAsAAAAFAAEAAAAGAAsAAAAHAAEAAAAHAAsAAAAIAAEAAAAIAAsAAAAJAAEAAAAFAAsAAAAKAAEAAAABAAsAAAALAAEAAAAEAAwAAAA=")
tile_set = SubResource("TileSet_k0y4w")
text = "Jesters and a Knight appear!
Madi's turn!"
max_display_cols = 37
line_spacing = 12

[node name="FightDisplayBox" type="NinePatchRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_dobpy")
offset_left = 760.0
offset_top = 380.0
offset_right = 837.0
offset_bottom = 442.0
scale = Vector2(4, 4)
texture = ExtResource("2_kxroq")
region_rect = Rect2(0, 0, 24, 22)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VisMask" type="ColorRect" parent="FightDisplayBox"]
show_behind_parent = true
clip_children = 2
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 72.0
offset_bottom = 57.0
color = Color(0, 0, 0, 1)

[node name="DefaultMoveBtn" parent="FightDisplayBox/VisMask" instance=ExtResource("9_iomjt")]
visible = false
offset_left = 6.5
offset_top = 5.0
offset_right = 6.5
offset_bottom = 5.0
text = "ATTACK"

[node name="TextDisplay" parent="FightDisplayBox/VisMask/DefaultMoveBtn" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAAAKAAgAAAABAAAAAAANAAkAAAACAAAAAAANAAkAAAADAAAAAAAKAAgAAAAEAAAAAAAMAAgAAAAFAAAAAAAEAAkAAAA=")
tile_set = SubResource("TileSet_dequl")
text = "ATTACK"
char_spacing = 7

[node name="ElementHitbox" parent="FightDisplayBox/VisMask/DefaultMoveBtn" index="1"]
offset_left = -6.0
offset_top = -4.0
offset_right = 60.0
offset_bottom = 8.0
cursor_pos = Vector2(1, 8)

[node name="Cursor" type="Sprite2D" parent="."]
visible = false
position = Vector2(783, 553)
scale = Vector2(2, 2)
texture = ExtResource("8_0fq08")

[editable path="Textbox"]
[editable path="FightDisplayBox/VisMask/DefaultMoveBtn"]
